--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.15",
+    "@reduxjs/toolkit": "^2.0.1",
     "@stripe/stripe-js": "^1.54.0",
     "graphql": "^16.6.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
