--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,11 @@
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "graphql": "^16.8.1",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.14.3",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^3.4.4",
-    "mongoose": "^7.0.2"
+    "mongoose": "^7.0.2",
+    "ws": "^8.16.0"
   }
 }
