--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@stripe/stripe-js": "^1.54.0",
     "graphql": "^16.6.0",
+    "graphql-ws": "^5.14.3",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
