--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apollo/server": "^4.10.0",
     "@graphql-tools/schema": "^10.0.2",
+    "apollo-server-express": "^3.13.0",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "graphql": "^16.8.1",
