--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@graphql-tools/schema": "^10.0.2",
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^4.0.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^16.8.1",
     "graphql-subscriptions": "^2.0.0",
